finally got the street view image to appear in the listing infobox, the problem was styling, i had specified a #id for the map to appear via, however the #id hadnt been added in the relevant style area in the css files, after fixing that, everything loaded as intended and whatnot, i dont specfically remember what brought the thought around, but im noticing (probably hindsight bias) that whenever i am stuck on a problem  and i go for a quick walk, typically i have the answer by the time i get back. ill now be moving onto library cards, the main page is actually starting to resemble a bloody site, regardless of the css magic used to get the shit framed right. this is a mobile site lol

--- a/public/stylesheets/home_style.css
+++ b/public/stylesheets/home_style.css
@@ -5,3 +5,8 @@
   margin: 0px !important;
   border: 0px !important;
  }
+
+ #pano {
+         width: 200px;
+         height: 200px;
+       }
